examples/test/testpolicy12319.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12319
  namespace: namespace377
spec:
  podSelector:
    matchLabels:
      key23: value3
      key47: value2
      key10: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value15
          key46: value14
          key10: value49
